Changelog for 1.44.0
Signed-off-by: Roland Grunberg <rgrunber@redhat.com>